--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title></title>
       <script src="serviceWorker1/pwabuilder-sw-register.js"></script>
+    <link rel="manifest" href="/manifest.json">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1">
     <meta name="MobileOptimized" content="320">
