--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 }
            
 </script>
-      <link src="mainfest.json" type="json">
+      <link rel="manifest" href="/manifest.json">
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1">
     <meta name="MobileOptimized" content="320">
