--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!Doctype html>
 <html>
 
   <head>
@@ -11,10 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link rel="manifest" href="./manifest.json">
 
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+      <link rel="stylesheet" href="./css/css/bootstrap.min.css">
+ <link rel="manifest" href="./manifest.json">
 
 
   </head>
@@ -42,7 +40,7 @@
       <div class="banner">
           <div class="row wel_banner">
             <div class="alert alert-info alert-dismissible" >
-              <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+              <a href="#" class="close xbutton" data-dismiss="alert" aria-label="close">&times;</a>
               <div class="hlo">Hello there,</div><div class="banner2"> You landed here because you clicked that you don’t have a bank account. Here's how we can help you out
             </div></div>
         </div>
@@ -162,7 +160,7 @@
              <div class="row">
                  <div class="col-12 pad-none center">
                  <a href="#" class="btn para_box_btn">
-                     SEARCH ACCOUNT ADS
+                     Search Account Ads
                      </a>
                  </div>
               </div>
@@ -384,9 +382,8 @@
           </div>
     </div>
       </div>
-    <script src="pwabuilder-sw-register.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="./css/js/bootstrap.min.js"></script>
+    <script src="./css/js/bootstrap.bundle.min.js" ></script>
+    <script src="./css/js/bootstrap.js"></script>
   </body>
 </html>
