--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
           
           <div class="col-12 pad-none">
          <span class="list_head xc"> 
-            Diffrent Bank' loan stastics
+            Different Bank' loan stastics
                 </span>
                   
 
 <table>
   <tr>
     <th>Bank</th>
-    <th>max_amount</th>
-    <th>I.Rate</th>
+    <th>Amount</th>
+    <th>Rate</th>
   </tr>
   <tr>
     <td>Royal Bank of Canada</td>
