--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ if ('serviceWorker' in navigator) {
 
 window.addEventListener('beforeinstallprompt', (e) => {
   // Prevent Chrome 67 and earlier from automatically showing the prompt
-  e.preventDefault();
+  e.preventDefault().prompt();
   // Stash the event so it can be triggered later.
   deferredPrompt = e;
   btnAdd.style.display = 'block';
