--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="banner_img">
       <div class="row bnr_img">
         <div class="col-12 pad-none">
-            <img class="img-fluid" src="banner.png">
+            <img class="img-fluid" src="banner.png" style="width:100%;">
           </div>  
         </div>
       </div>
