--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <title>PATH.MONEY</title>
+    <title>path.money</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1">
     <meta name="MobileOptimized" content="320">
