--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </div> 
                     
                   <div class="col pad-none">
-                    <a href="#" class="button2" >Search Loan Ads</a>
+                    <a href="./cards.html" class="button2" >view cards</a>
                   </div>
 
           </div>
