--- a/cards_2.html
+++ b/cards_2.html
@@ -11,7 +11,7 @@
     
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="css/cards_main.css" type="text/css">
+    <link rel="stylesheet" href="css/cards_main_2.css" type="text/css">
 
       <link rel="stylesheet" href="./css/css/bootstrap.min.css">
  <link rel="manifest" href="./manifest.json">
@@ -29,7 +29,7 @@
                   <div class="logo"><img class="float-left" src="logo.svg"></div>
                 </div>
                 <div class="col pad-none">
-                  <a href="./cards_2.html" class=" button" >Cards</a>
+                  <a href="./cards_3.html" class=" button" >Cards</a>
                 </div>
               </div>
              </div>
@@ -482,7 +482,7 @@ extra details
       <div class="row">
           <div class="col pad-none">
           <div class="para_1">
-           <div class="rect">
+           <div class="rect2">
               <div class="row">
                <div class="col pad-none card_name">
                    <div class="row">      <span>Avant Inc</span></div>
@@ -623,7 +623,7 @@ extra details
       <div class="row">
           <div class="col pad-none">
           <div class="para_1">
-           <div class="rect">
+           <div class="rect2">
               <div class="row">
                <div class="col pad-none card_name">
                    <div class="row">      <span>Lending Club</span></div>
